[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://WallSlideParticle.tres.material" type="Material" id=2]
[ext_resource path="res://Graphics/Characters/Player/PlayerThigh.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Characters/Player/PlayerLeg.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Characters/Player/PlayerArm.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Characters/Player/PlayerBody.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Characters/Player/PlayerHead.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 120, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 264.83
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 0.95
radial_accel = 10.0
radial_accel_random = 1.0
scale = 0.5
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=19]
length = 0.3
loop = true

[sub_resource type="Animation" id=20]
length = 0.4
loop = true

[sub_resource type="Animation" id=21]
length = 0.1

[sub_resource type="Animation" id=7]
length = 0.2
loop = true

[sub_resource type="Animation" id=8]
length = 0.4
loop = true

[sub_resource type="Animation" id=9]
length = 0.1

[sub_resource type="Animation" id=10]
length = 0.5
loop = true

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 3.44833, 14.1674 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 7.22661, 13.9009 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 3.89858, 8.74267 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="WallSlide" type="Particles2D" parent="."]
modulate = Color( 0.623529, 0.623529, 0.623529, 1 )
scale = Vector2( 2, 2 )
amount = 40
lifetime = 0.75
fract_delta = false
local_coords = false
draw_order = 1
process_material = ExtResource( 2 )

[node name="DoubleJump" type="Particles2D" parent="."]
position = Vector2( 0.231964, 11.3663 )
emitting = false
amount = 15
lifetime = 0.4
preprocess = 1.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 200
local_coords = false
process_material = SubResource( 3 )

[node name="Visual" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -0.271877, 4.35002 )
scale = Vector2( 0.3, 0.3 )

[node name="LeftThigh" type="Sprite" parent="Visual"]
position = Vector2( -4.38528, -1.72628 )
rotation = 0.0701684
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
offset = Vector2( 0.174332, 37.714 )
__meta__ = {
"_edit_ik_": true
}

[node name="LeftLeg" type="Sprite" parent="Visual"]
position = Vector2( -5.84453, 7.79347 )
rotation = 0.0701684
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
offset = Vector2( -3.77505, 35.3307 )
__meta__ = {
"_edit_ik_": true
}

[node name="LeftArm" type="Sprite" parent="Visual"]
position = Vector2( -0.809454, -25.2392 )
rotation = 2.0083
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
offset = Vector2( 132.2, 16.2942 )

[node name="Body" type="Sprite" parent="Visual"]
position = Vector2( 2.54755, -0.502838 )
rotation = 0.0746677
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
offset = Vector2( -6.44057, -153.625 )
__meta__ = {
"_edit_bone_": true
}

[node name="Head" type="Sprite" parent="Visual/Body"]
editor/display_folded = true
position = Vector2( -29.4294, -264.431 )
rotation = -0.189598
texture = ExtResource( 7 )
offset = Vector2( -10.0856, -142.926 )
__meta__ = {
"_edit_bone_": true
}

[node name="HeadBone" type="Node2D" parent="Visual/Body/Head"]
position = Vector2( -3.28015, -286.692 )
rotation = 1.43475
__meta__ = {
"_edit_bone_": true
}

[node name="LeftThigh" type="RemoteTransform2D" parent="Visual/Body"]
position = Vector2( -70.0478, -7.02855 )
rotation = -0.00449931
remote_path = NodePath("../../LeftThigh")
__meta__ = {
"_edit_bone_": true
}

[node name="LeftThighBone" type="Node2D" parent="Visual/Body/LeftThigh"]
position = Vector2( -4.16504, 96.3051 )
rotation = 1.4315
scale = Vector2( 0.999999, 0.999999 )
__meta__ = {
"_edit_bone_": true
}

[node name="LeftLeg" type="RemoteTransform2D" parent="Visual/Body/LeftThigh"]
position = Vector2( -7.88218, 95.9863 )
remote_path = NodePath("../../../LeftLeg")
__meta__ = {
"_edit_bone_": true
}

[node name="LeftLegBone" type="Node2D" parent="Visual/Body/LeftThigh/LeftLeg"]
position = Vector2( 4.88953, 152.943 )
rotation = 1.4315
__meta__ = {
"_edit_bone_": true
}

[node name="LeftArm" type="RemoteTransform2D" parent="Visual/Body"]
editor/display_folded = true
position = Vector2( -51.9294, -244.17 )
rotation = 1.93363
remote_path = NodePath("../../LeftArm")
__meta__ = {
"_edit_bone_": true
}

[node name="LeftArmBone" type="Node2D" parent="Visual/Body/LeftArm"]
position = Vector2( 222.068, 14.2167 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightThigh" type="Sprite" parent="Visual/Body"]
editor/display_folded = true
position = Vector2( 51.0267, -19.8634 )
rotation = -0.292127
texture = ExtResource( 3 )
offset = Vector2( -7.61988, 57.6945 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightThighBone" type="Node2D" parent="Visual/Body/RightThigh"]
position = Vector2( -12.8851, 113.304 )
rotation = 1.71504
__meta__ = {
"_edit_bone_": true
}

[node name="RightLeg" type="Sprite" parent="Visual/Body/RightThigh"]
position = Vector2( -17.4853, 79.1358 )
rotation = 0.247068
texture = ExtResource( 4 )
offset = Vector2( 3.4918, 39.9547 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightLegBone" type="Node2D" parent="Visual/Body/RightThigh/RightLeg"]
position = Vector2( 19.4479, 167.322 )
rotation = 1.46797
__meta__ = {
"_edit_bone_": true
}

[node name="RightArm" type="Sprite" parent="Visual/Body"]
position = Vector2( 62.6053, -246.755 )
rotation = 1.42291
texture = ExtResource( 5 )
offset = Vector2( 132.2, 16.2942 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightArmBone" type="Node2D" parent="Visual/Body/RightArm"]
position = Vector2( 219.764, 1.88181 )
__meta__ = {
"_edit_bone_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 19 )
anims/Crouch = SubResource( 20 )
anims/Fall = SubResource( 21 )
anims/Hurt = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/Jump = SubResource( 9 )
anims/Run = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.4, 0.4 )
limit_top = -20
drag_margin_h_enabled = false

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.24394, 0.839417 )
shape = SubResource( 11 )

[node name="ClimbDetection" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0, 4.19579 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClimbDetection"]
position = Vector2( 0.102219, -5.55539 )
shape = SubResource( 12 )

[node name="Hitbox" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -0.349649, 3.37994 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.0340958, -4.23034 )
shape = SubResource( 13 )

[node name="ImmortalDuration" type="Timer" parent="."]

[node name="HeadCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2( -0.150616, -15.5143 )
enabled = true
cast_to = Vector2( 0, -4 )

[node name="FeetCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RightSideCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2( -0.602493, -3.8868 )
enabled = true
cast_to = Vector2( 13, 0 )

[node name="LeftSideCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0.397507, -3.8868 )
enabled = true
cast_to = Vector2( -13, 0 )
[connection signal="timeout" from="ImmortalDuration" to="." method="_on_ImmortalDuration_timeout"]
